--- a/templates/template.html
+++ b/templates/template.html
@@ -14,6 +14,8 @@
                   <ul class="menu">
                      <li><a href="{{ url_for('home') }}">Home</a></li>
                      <li><a href="{{ url_for('about') }}">About</a></li>
+                     <li><a href="{{ url_for('test_mapbox') }}">Mapbox</a></li>
+                     <li><a href="{{ url_for('test_leaflet') }}">Leaflet</a></li>
                   </ul>
                </nav>
             </strong>
