--- a/templates/test_leaflet.html
+++ b/templates/test_leaflet.html
@@ -12,7 +12,7 @@
     crossorigin=""></script>
 
     <style>
-        #map { height: 400px; }
+        #map { height: 600px; }
     </style>
 
   </head>
@@ -23,13 +23,19 @@
     <div id='map'></div>
     <script>
 
-      var map = L.map('map').setView([51.505, -0.09], 13);
+      // initialize the map on the "map" div with a given center and zoom
+      var map = L.map('map', {
+          center: [51.505, -0.09], 
+          zoom: 13
+      });
+      map.fitWorld();
 
-      L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+      var tileLayer = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', { 
           attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
       }).addTo(map);
+      tileLayer.addTo(map);
 
-      L.marker([51.5, -0.09]).addTo(map)
+      var marker = L.marker([51.5, -0.09]).addTo(map)
           .bindPopup('A pretty CSS3 popup.<br> Easily customizable.')
           .openPopup();
 
