--- a/templates/test_mapbox.html
+++ b/templates/test_mapbox.html
@@ -3,28 +3,34 @@
 
   <head>
     <meta charset='utf-8' />
-    <title>OpenMapTiles OSM Bright style</title>
+
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.29.0/mapbox-gl.js'></script>
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.29.0/mapbox-gl.css' rel='stylesheet' />
+    
     <style>
-        body { margin:0; padding:0; }
-        #map { position:relative; top:0; bottom:0; width:100%; }
+        #map { height: 700px; }
     </style>
   </head>
 
   <body>
     {% extends "template.html" %}
     {% block content %}
+
     <div id='map'></div>
     <script>
         var map = new mapboxgl.Map({
             container: 'map',
-            style: 'https://openmaptiles.github.io/osm-bright-gl-style/style-cdn.json',
-            center: [8.5456, 47.3739],
-            zoom: 11
+            style: 'https://openmaptiles.geo.data.gouv.fr/styles/osm-bright/style.json', 
+            //'https://openmaptiles.github.io/klokantech-basic-gl-style/style-cdn.json',
+            //'https://openmaptiles.github.io/osm-bright-gl-style/style-cdn.json',
+            center: [3, 47],
+            zoom: 5,
+            minZoom: 1,
+            maxZoom: 19
         });
     </script>
+
     {% endblock %}
   </body>
 </html>
