--- a/templates/about.html
+++ b/templates/about.html
@@ -2,14 +2,15 @@
 <html lang="en" dir="ltr">
    <head>
       <meta charset="utf-8">
-      <title>About Flask</title>
+      <title>About</title>
    </head>
    <body>
       {% extends "template.html" %}
       {% block content %}
-      <h1> About Flask </h1>
-      <p> Flask is a top Python web framework. </p>
-      <p> Top web apps using the Flask framework. </p>
+      <h1> À propos du projet </h1>
+      <p> Cette application web a pour but la détection de fraudes à la sous-location HLM en AirBnB. </p>
+      <p> Dans sa version finale elle devrait proposer une vue principale, affichant une carte interactive de Paris
+         et permettant de visualiser les différentes fraudes détectées au niveau de la zone sélectionnée. </p>
       {% endblock %}
    </body>
 </html>
