--- a/templates/home.html
+++ b/templates/home.html
@@ -2,12 +2,12 @@
 <html lang="en" dir="ltr">
    <head>
       <meta charset="utf-8">
-      <title>Home for Simple Flask Website</title>
+      <title>Home</title>
    </head>
    <body>
       {% extends "template.html" %}
       {% block content %}
-      <h1> Building a Simple Flask Website </h1>
+      <h1> Building a simple web application with Flask </h1>
       <p> Flask is a Fun and easy framework</p>
       <p> Flask and HTML in python looks cool</p>
       {% endblock %}
