--- a/templates/template.html
+++ b/templates/template.html
@@ -2,13 +2,13 @@
 <html lang="en" dir="ltr">
    <head>
       <meta charset="utf-8">
-      <title>Flask Parent Template</title>
+      <title>FTemplate web application</title>
       <link rel="stylesheet" href="{{ url_for('static', filename='css/template.css') }}">
    </head>
    <body>
       <header>
          <div class="container">
-            <h1 class="logo">Simple Flask Website</h1>
+            <h1 class="logo">Projet d'option - Oresys</h1>
             <strong>
                <nav>
                   <ul class="menu">
