--- a/templates/test_polygon.html
+++ b/templates/test_polygon.html
@@ -1,14 +1,26 @@
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset='utf-8' />
+<title>Add a GeoJSON polygon</title>
+<meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
+<script src='https://api.tiles.mapbox.com/mapbox-gl-js/v1.5.0/mapbox-gl.js'></script>
+<link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.5.0/mapbox-gl.css' rel='stylesheet' />
+<style>
+body { margin: 0; padding: 0; }
+#map { position: absolute; top: 0; bottom: 0; width: 100%; };
+</style>
+</head>
+<body>
+<div id='map'></div>
+<script>
 mapboxgl.accessToken = '<your access token here>';
 var map = new mapboxgl.Map({
-    container: 'map',
-    style: 'https://openmaptiles.geo.data.gouv.fr/styles/osm-bright/style.json', 
-    //'https://openmaptiles.github.io/klokantech-basic-gl-style/style-cdn.json',
-    //'https://openmaptiles.github.io/osm-bright-gl-style/style-cdn.json',
-    center: [3, 47],
-    zoom: 5,
-    minZoom: 1,
-    maxZoom: 19
-    });
+container: 'map',
+style: 'https://openmaptiles.geo.data.gouv.fr/styles/osm-bright/style.json',
+center: [-68.13734351262877, 45.137451890638886],
+zoom: 5
+});
  
 map.on('load', function () {
  
@@ -51,3 +63,7 @@ map.addLayer({
 }
 });
 });
+</script>
+ 
+</body>
+</html>
