--- a/templates/test_mapbox.html
+++ b/templates/test_mapbox.html
@@ -1,28 +1,26 @@
 <!DOCTYPE html>
+<html>
+    <head>
+        <meta charset='utf-8' />
+        <title>Testing Mapbox API</title>
+        <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
+        <style>
+            #map { height: 100%; };
+        </style>
+    </head>
 
-  <head>
-    <meta charset='utf-8' />
-    <title>Testing mapbox API</title>
-    <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
-    <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.29.0/mapbox-gl.js'></script>
-    <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.29.0/mapbox-gl.css' rel='stylesheet' />
-
-    <style>
-        #map { height:100% };
-    </style>
-  </head>
-
-  {% extends "template.html" %}
-  {% block content %}
-    <style>
-      .mapboxgl-popup {
-      max-width: 400px;
-      font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
-      }
-    </style>
-    
-    <div id='map'></div>
-    <script src='/static/js/test_mapbox.js'></script>
-
-  {% endblock %}
+    <body>
+        {% extends "template.html" %}
+        {% block content %}
+        <style>
+            .mapboxgl-popup {
+                max-width: 400px;
+                font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
+            }
+        </style>
+        
+        <div id='map'></div>
+        <script src='/static/js/test_mapbox.js'></script>
+        {% endblock %}
+    </body>
 </html>
