--- a/templates/test_mapbox.html
+++ b/templates/test_mapbox.html
@@ -17,9 +17,24 @@
                 max-width: 400px;
                 font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
             }
+            .coordinates {
+                background: rgba(0,0,0,0.5);
+                color: #fff;
+                position: absolute;
+                bottom: 40px;
+                left: 10px;
+                padding:5px 10px;
+                margin: 0;
+                font-size: 11px;
+                line-height: 18px;
+                border-radius: 3px;
+                display: block;
+            }
         </style>
         
         <div id='map'></div>
+        <pre id='coordinates' class='coordinates'></pre>
+
         <script src='/static/js/test_mapbox.js'></script>
         {% endblock %}
     </body>
