--- a/static/css/template.css
+++ b/static/css/template.css
@@ -7,16 +7,35 @@ body {
     padding: 0;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     color: rgb(0, 0, 0);
+    display: flex;
+    flex-direction: column;
     }
 /*
 * Formatting the header area
 */
+.mapboxgl-popup {
+    max-width: 400px;
+    font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
+}
+.coordinates {
+    background: rgba(0,0,0,0.5);
+    color: #fff;
+    position: absolute;
+    bottom: 25px;
+    left: 10px;
+    padding:5px 10px;
+    margin: 0;
+    font-size: 11px;
+    line-height: 18px;
+    border-radius: 3px;
+    display: block;
+}
 header {
-background-color: rgb(50, 20, 121);
-height: 35px;
-width: 100%;
-opacity: .9;
-margin-bottom: 10px;
+    background-color: rgb(50, 20, 121);
+    height: 35px;
+    width: 100%;
+    opacity: .9;
+    margin-bottom: 0px;
 }
 header h1.logo {
 margin: 0;
