--- a/templates/test_mapbox.html
+++ b/templates/test_mapbox.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset='utf-8' />
-        <title>Testing Mapbox API</title>
+        <title>Projet d'option Oresys</title>
         <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
         <style>
             #map { 
