--- a/po_oresys/templates/carte.html
+++ b/po_oresys/templates/carte.html
@@ -59,7 +59,7 @@
             <nav id="hide_layers"></nav>
         </div>
 
-        <script src='/static/js/test_mapbox.js'></script>
+        <script src='/static/js/carte.js'></script>
         {% endblock %}
     </body>
 </html>
